--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -118,7 +118,14 @@ body {
     transition: all 0.3s ease;
 }
 
-.product-button.added {
+.added {
+    /*background-color: #4CAF50; !* Vert par défaut *!*/
+    color: white;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 4px;
+    /*cursor: pointer;*/
+    transition: all 0.3s ease;
     background-color: #9e9e9e; /* Gris une fois ajouté */
     cursor: not-allowed;
 }
